--- a/styles.css
+++ b/styles.css
@@ -34,10 +34,10 @@
 
 body {
   background: radial-gradient(
-      rgba(var(--bg-rad-grad), 0.6),
-      rgba(var(--bg-rad-grad), 0.8)
+      rgba(var(--bg-rad-grad), 0.5),
+      rgba(var(--bg-rad-grad), 0.6)
     ),
-    url(assets/joan-gamell-ZS67i1HLllo-unsplash.jpg) no-repeat top center/auto;
+    url(assets/683980.png) no-repeat top center/auto;
   /* propriedade do fundo: url da imagem de fundo       repetição da imagem  posição da img/cobertura img  */
 }
 
