--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,8 @@
 }
 
 body {
+  width: 100%;
+  height: 100%;
   background: radial-gradient(
       rgba(var(--bg-rad-grad), 0.5),
       rgba(var(--bg-rad-grad), 0.6)
